Terminar front-end

--- a/home.html
+++ b/home.html
@@ -8,9 +8,11 @@
     </head>
     <body>
         <header>
-            <img src="./assets/logo.png" alt="">
-            <a class="sobre" href="">Sobre</a>
-            <a class="receitas" href="">Receitas</a>
+            <a href="home.html">
+                <img src="./assets/logo.png" alt="">
+            </a>
+            <a class="sobre" href="about.html">Sobre</a>
+            <a class="receitas" href="recipes.html">Receitas</a>
         </header>
 
         <div class="info">
